# studio-packet-dumper

./: .clang-format  .gitignore  CMakeLists.txt  Cargo.toml  README.md
.github/workflows/: build-and-create-release.yml
client/: Cargo.toml
client/src/: main.cpp  main.rs  packet.rs
dumper/: CMakeLists.txt
dumper/src/: VFTable.h  main.cpp
src/: Context.h  MenuState.h  NetworkStream.hpp  PacketWriter.hpp  Region.h  Types.h  Types.hpp  VFTable.h  VFTable.hpp  gui.cpp  main.cpp  main.rs  packet.rs
